--- a/graphql-api/package.json
+++ b/graphql-api/package.json
@@ -1,9 +1,22 @@
 {
+  "name": "graphql-api",
+  "version": "0.1.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Frederik Willaert",
+  "license": "SEE LICENSE IN readme.txt",
+  "description": "",
   "dependencies": {
     "apollo-server": "^2.23.0",
     "graphql": "^15.5.0",
     "lodash": "^4.17.21",
     "neo4j-driver": "^4.2.3",
     "neo4j-graphql-js": "^2.19.2"
+  },
+  "devDependencies": {
+    "esbuild": "^0.12.8",
+    "typescript": "^4.3.2"
   }
 }
