--- a/graphql-api/package.json
+++ b/graphql-api/package.json
@@ -10,12 +10,14 @@
   "description": "",
   "dependencies": {
     "apollo-server": "^2.23.0",
+    "apollo-server-lambda": "^2.25.1",
     "graphql": "^15.5.0",
     "lodash": "^4.17.21",
     "neo4j-driver": "^4.2.3",
     "neo4j-graphql-js": "^2.19.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "esbuild": "^0.12.8",
     "typescript": "^4.3.2"
   }
