--- a/graphql-api/package.json
+++ b/graphql-api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apollo-server": "^2.23.0",
     "apollo-server-lambda": "^2.25.1",
+    "aws-sdk": "^2.928.0",
     "graphql": "^15.5.0",
     "lodash": "^4.17.21",
     "neo4j-driver": "^4.2.3",
